<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_health"
        android:icon="@drawable/ic_heart"
        android:title="@string/nav_health"
        />
<!-- android:actionLayout="@layout/activity_main"-->
    <item
        android:id="@+id/nav_chatbox"
        android:icon="@drawable/circle"
        android:title="@string/nav_chat"
        />
    <item
        android:id="@+id/nav_goals"
        android:icon="@drawable/ic_run"
        android:title="@string/nav_goals" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>